Fix whitespace rendering in diff (#13415)
- Introduce new .code-inner class that sets the CSS attributes on
rendered code lines like view,blame and diff.
- Rename .wrap class to .word-break to reflect what it actually does
- Remove .raw which was only used on webhook page
- Set white-space: pre-wrap except on blame where it can break the
layout

Fixes: https://github.com/go-gitea/gitea/issues/13406

--- a/web_src/less/helpers.less
+++ b/web_src/less/helpers.less
@@ -4,6 +4,9 @@
 .js { justify-content: flex-start; }
 .je { justify-content: flex-end; }
 .sb { justify-content: space-between; }
+.mono { font-family: var(--fonts-monospace); }
+.rounded { border-radius: var(--border-radius) !important; }
+.word-break { word-wrap: break-word; word-break: break-all; }
 
 .m-0 { margin: 0 !important; }
 .m-1 { margin: .125rem !important; }
